Added a message at the top of edit profile

--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -11,7 +11,7 @@
             <div class="space-y-6 pt-8 sm:space-y-5 sm:pt-10">
                 <div>
                     <h3 class="text-lg font-medium leading-6 text-gray-900">Editing {{ user.name }}'s Profile</h3>
-                    <p class="mt-1 max-w-2xl text-sm text-gray-500"></p>
+                    <p class="mt-1 max-w-3xl text-sm text-gray-500">All fields are optional, but keep in mind that filling out more fields will result in a more personalized experience.</p>
                 </div>
                 <div class="space-y-6 sm:space-y-5">
                     <div class="sm:grid sm:grid-cols-3 sm:items-center sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
