Added pre filled out email for stripe management page

--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -38,7 +38,7 @@
                                 <p class="mt-1 mb-1 ml-1 text-sm text-gray-700">
                                     {{ billing_email }} is the billing contact for your account.
                                 <p>
-                                <a type="button" href="https://billing.stripe.com/p/login/4gw8zp2YTeZmcta288"
+                                <a type="button" href="{{ manage_billing_link }}"
                                    class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Manage
                                     Billing</a>
                             {% endif %}
