Added link to figure out personality type

--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -54,8 +54,9 @@
                             <br>
                             <label for="personality_type" class="block text-xs font-medium text-gray-900">Personality Type</label>
                             {{ form.personality_type }}
+                            <small>If you are unsure about which personality type you are, find out <a href="https://www.16personalities.com/free-personality-test">here</a></small>
                             <br>
-                            <label for="chinese_zodiac" class="block text-xs font-medium text-gray-900">Chinese Zodiac</label>
+                            <label for="chinese_zodiac" class="block text-xs font-medium text-gray-900 pt-3">Chinese Zodiac</label>
                             {{ form.chinese_zodiac }}
                             <small>Find out your chinese zodiac <a href="https://www.travelchinaguide.com/intro/social_customs/zodiac/">here</a></small>
                             <br>
