Removed background image on profile

--- a/templates/companies/user_profile.html
+++ b/templates/companies/user_profile.html
@@ -10,8 +10,8 @@
                 <main class="relative z-0 flex-1 focus:outline-none xl:order-last">
                     <article>
                         <div>
-                            <div>
-                                <img class="h-32 w-full object-cover lg:h-48" src="https://images.unsplash.com/photo-1444628838545-ac4016a5418a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
+                            <div class="h-32">
+                                {#                                <img class="h-32 w-full object-cover lg:h-48" src="https://images.unsplash.com/photo-1444628838545-ac4016a5418a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">#}
                             </div>
                             <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
                                 <div class="-mt-12 sm:-mt-16 sm:flex sm:items-end sm:space-x-5">
