--- a/templates/email/invite.html
+++ b/templates/email/invite.html
@@ -473,7 +473,7 @@
                                 <td class="content-cell">
                                     <div class="f-fallback">
                                         <h1>Howdy,</h1>
-                                        <p>{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use Team Bio to collaborate with them. Use the button below to set up your account with the email you received this email at and get started:</p>
+                                        <p>{{ invite_sender_name }} from {{ invite_sender_organization_name }} has invited you to use Team Bio. Use the button below to set up your account with the email you received this email at and get started:</p>
                                         <!-- Action -->
                                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                                             <tr>
