--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -49,7 +49,7 @@
                     <h3 class="text-lg font-medium leading-6 text-gray-900">Profile</h3>
                     <div class="space-y-6 sm:space-y-5">
                         <div class="rounded-md px-3 pt-2.5 pb-1.5">
-                            <label for="short_bio" class="block text-xs font-medium text-gray-900">Short Bio</label>
+                            <label for="short_bio" class="block text-xs font-medium text-gray-900">Bio</label>
                             {{ form.short_bio }}
                             <br>
                             <label for="personality_type" class="block text-xs font-medium text-gray-900">Personality Type</label>
