--- a/templates/companies/add_team.html
+++ b/templates/companies/add_team.html
@@ -1,26 +1,31 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}{{ user.company }} Add Team{% endblock title %}
+
+{% block title %}Add team to {{ user.company }}{% endblock title %}
 
 {% block content %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.5.1/jscolor.min.js"></script>
     <main class="mx-auto max-w-6xl px-4 pb-12 lg:pb-16">
         <div class="bg-white shadow sm:rounded-lg">
             <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium leading-6 text-gray-900">Add team to {{ user.company }}</h3>
-                <div class="mt-2 max-w-xl text-sm text-gray-500">
-                    <p>Enter the team name.</p>
-                </div>
-                <form class="mt-3 sm:flex sm:items-center" method="post">
-                    <div class="w-full sm:max-w-xs">
-                        <label for="email" class="sr-only">Team</label>
-                        {{ form.name }}
+                <form class="mt-3 sm:items-center" method="post">
+                    <div class="space-y-6 sm:space-y-5">
+                        <div class="rounded-md px-3 pt-2.5 pb-1.5">
+                            <label for="name" class="block text-xs font-medium text-gray-900">Team Name</label>
+                            {{ form.name }}
+                            <br>
+                            <label for="color" class="block text-xs font-medium text-gray-900">Color</label>
+                            {{ form.color }}
+                            <br>
+                            <button type="submit"
+                                    class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">
+                                Create
+                            </button>
+                        </div>
+                        {% csrf_token %}
                     </div>
-                    {% csrf_token %}
-                    <button type="submit"
-                            class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-                        Submit
-                    </button>
                 </form>
             </div>
         </div>
