--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -274,6 +274,7 @@
                                     <tr>
                                         <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
                                         <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Number of Employees</th>
+                                        <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Color</th>
                                         <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                                             <span class="sr-only">Controls</span>
                                         </th>
@@ -284,6 +285,7 @@
                                         <tr>
                                             <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ team.name }}</td>
                                             <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ team.user__count }}</td>
+                                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" style="color: {{ team.color }}">{{ team.color }}</td>
                                             <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                                                 <a href="{% url 'update_team' team.pk %}" class="text-indigo-600 hover:text-indigo-900">Update</a>
                                                 <br>
