--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -31,28 +31,12 @@
                             zoom: 6,
                             maxZoom: 12,
                         });
+                        map.addControl(new mapboxgl.FullscreenControl());
 
                         map.on('load', () => {
-                            map.addSource('places', {
-                                'type': 'geojson',
-                                'data': {
-                                    'type': 'FeatureCollection',
-                                    'features': [
-                                        {% for lng, lat, team_name in user_points %}
-                                            {
-                                                'type': 'Feature',
-                                                'properties': {
-                                                    'description':
-                                                        '<strong>{{ team_name }}</strong>'
-                                                },
-                                                'geometry': {
-                                                    'type': 'Point',
-                                                    'coordinates': [{{ lng }}, {{ lat }}]
-                                                }
-                                            },
-                                        {% endfor %}
-                                    ]
-                                }
+                            const popup = new mapboxgl.Popup({
+                                closeButton: false,
+                                closeOnClick: false
                             });
                             map.addSource('midpoint', {
                                 'type': 'geojson',
@@ -63,7 +47,7 @@
                                             'type': 'Feature',
                                             'properties': {
                                                 'description':
-                                                    '<strong>Company Midpoint ({{ mid_lng|floatformat:4 }}, {{ mid_lat|floatformat:4 }})</strong>'
+                                                    '<strong>Company Midpoint<br>({{ mid_lng|floatformat:4 }}, {{ mid_lat|floatformat:4 }})</strong>'
                                             },
                                             'geometry': {
                                                 'type': 'Point',
@@ -71,18 +55,6 @@
                                             }
                                         },
                                     ]
-                                }
-                            });
-                            // Add a layer showing the places.
-                            map.addLayer({
-                                'id': 'places',
-                                'type': 'circle',
-                                'source': 'places',
-                                'paint': {
-                                    'circle-color': '#4264fb',
-                                    'circle-radius': 6,
-                                    'circle-stroke-width': 2,
-                                    'circle-stroke-color': '#ffffff'
                                 }
                             });
                             map.addLayer({
@@ -93,43 +65,9 @@
                                     'circle-color': '#ff1f1f',
                                     'circle-radius': 6,
                                     'circle-stroke-width': 2,
-                                    'circle-stroke-color': '#ffffff'
+                                    'circle-stroke-color': '#6b6b6b'
                                 }
                             });
-                            map.fitBounds([
-                                {{sw_corner}}, // southwestern corner of the bounds
-                                {{ ne_corner }} // northeastern corner of the bounds
-                            ]);
-
-                            // Create a popup, but don't add it to the map yet.
-                            const popup = new mapboxgl.Popup({
-                                closeButton: false,
-                                closeOnClick: false
-                            });
-
-                            map.on('mouseenter', 'places', (e) => {
-                                map.getCanvas().style.cursor = 'pointer';
-
-                                // Copy coordinates array.
-                                const coordinates = e.features[0].geometry.coordinates.slice();
-                                const description = e.features[0].properties.description;
-
-                                // Ensure that if the map is zoomed out such that multiple
-                                // copies of the feature are visible, the popup appears
-                                // over the copy being pointed to.
-                                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                                }
-
-                                // Populate the popup and set its coordinates// based on the feature found.
-                                popup.setLngLat(coordinates).setHTML(description).addTo(map);
-                            });
-
-                            map.on('mouseleave', 'places', () => {
-                                map.getCanvas().style.cursor = '';
-                                popup.remove();
-                            });
-
                             map.on('mouseenter', 'midpoint', (e) => {
                                 map.getCanvas().style.cursor = 'pointer';
 
@@ -147,11 +85,70 @@
                                 // Populate the popup and set its coordinates// based on the feature found.
                                 popup.setLngLat(coordinates).setHTML(description).addTo(map);
                             });
-
                             map.on('mouseleave', 'midpoint', () => {
                                 map.getCanvas().style.cursor = '';
                                 popup.remove();
                             });
+                            map.fitBounds([
+                                {{sw_corner}}, // southwestern corner of the bounds
+                                {{ ne_corner }} // northeastern corner of the bounds
+                            ]);
+
+                            {% for team_name, color, user_points in map_teams %}
+                                map.addSource('{{ team_name }}', {
+                                    'type': 'geojson',
+                                    'data': {
+                                        'type': 'FeatureCollection',
+                                        'features': [
+                                            {% for lng, lat, name in user_points %}
+                                                {
+                                                    'type': 'Feature',
+                                                    'properties': {
+                                                        'description':
+                                                            '<strong>{{ name | safe }}</strong>'
+                                                    },
+                                                    'geometry': {
+                                                        'type': 'Point',
+                                                        'coordinates': [{{ lng }}, {{ lat }}]
+                                                    }
+                                                },
+                                            {% endfor %}
+                                        ]
+                                    }
+                                });
+                                map.addLayer({
+                                    'id': '{{ team_name }}',
+                                    'type': 'circle',
+                                    'source': '{{ team_name }}',
+                                    'paint': {
+                                        'circle-color': '{{ color }}',
+                                        'circle-radius': 6,
+                                        'circle-stroke-width': 2,
+                                        'circle-stroke-color': '#6b6b6b'
+                                    }
+                                });
+                                map.on('mouseenter', '{{ team_name }}', (e) => {
+                                    map.getCanvas().style.cursor = 'pointer';
+
+                                    // Copy coordinates array.
+                                    const coordinates = e.features[0].geometry.coordinates.slice();
+                                    const description = e.features[0].properties.description;
+
+                                    // Ensure that if the map is zoomed out such that multiple
+                                    // copies of the feature are visible, the popup appears
+                                    // over the copy being pointed to.
+                                    while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+                                        coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+                                    }
+
+                                    // Populate the popup and set its coordinates// based on the feature found.
+                                    popup.setLngLat(coordinates).setHTML(description).addTo(map);
+                                });
+                                map.on('mouseleave', '{{ team_name }}', () => {
+                                    map.getCanvas().style.cursor = '';
+                                    popup.remove();
+                                });
+                            {% endfor %}
                         });
                     </script>
                 {% endif %}
