--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -113,7 +113,7 @@
             <div class="bg-white shadow sm:rounded-lg">
                 <div class="px-4 py-5 sm:p-6">
                     <h3 class="text-lg font-medium leading-6 text-gray-900">Address</h3>
-                    <p class="mt-1 max-w-3xl text-sm text-gray-500">Address information will not be shared publicly, it is used for the company map and to calculate a company midpoint</p>
+                    <p class="mt-1 max-w-3xl text-sm text-gray-500">Only city/state will be shared on the map. The rest of the information is used to more precisely place your point on the map and give a more accurate company midpoint.</p>
                     <div class="space-y-6 sm:space-y-5">
                         <div class="rounded-md px-3 pt-2.5 pb-1.5">
                             <label for="address_1" class="block text-xs font-medium text-gray-900">Address</label>
