Added pets page

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -56,8 +56,8 @@
                     <div class="ml-10 hidden space-x-8 lg:block">
                         {% if user.is_authenticated %}
                             <a href="{% url 'company_home' %}" class="text-base font-medium text-white hover:text-indigo-50">Home</a>
+                            <a href="{% url 'company_pets' %}" class="text-base font-medium text-white hover:text-indigo-50">Pets</a>
 
-                            <a href="{% url 'user_profile' user.email_prefix %}" class="text-base font-medium text-white hover:text-indigo-50">My Profile</a>
                             {% if user.pk in user.company.get_owners %}
                                 <a href="{% url 'company_settings' %}" class="text-base font-medium text-white hover:text-indigo-50">Settings</a>
                             {% endif %}
@@ -85,7 +85,7 @@
             <div class="flex flex-wrap justify-center space-x-6 py-4 lg:hidden">
                 {% if user.is_authenticated %}
                     <a href="{% url 'company_home' %}" class="text-base font-medium text-white hover:text-indigo-50">Home</a>
-                    <a href="{% url 'user_profile' user.email_prefix %}" class="text-base font-medium text-white hover:text-indigo-50">My Profile</a>
+                    <a href="{% url 'company_pets' %}" class="text-base font-medium text-white hover:text-indigo-50">Pets</a>
                     {% if user in user.company.get_owners %}
                         <a href="{% url 'company_settings' %}" class="text-base font-medium text-white hover:text-indigo-50">Settings</a>
                     {% endif %}
