--- a/templates/companies/pets.html
+++ b/templates/companies/pets.html
@@ -1,11 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}{{ user.company.name }} Home{% endblock title %}
-{% block head_scripts %}
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
-{% endblock head_scripts %}
+{% block title %}{{ user.company.name }} Pets{% endblock title %}
 
 {% block content %}
     <div class="bg-white">
