--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,8 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
               crossorigin="anonymous">
-
-
+        
         <!-- Tailwinds CSS -->
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet"/>
@@ -117,6 +116,9 @@
             </div>
             <div class="px-5 py-2">
                 <a href="{% url 'pricing' %}" class="text-base text-gray-500 hover:text-gray-900">Pricing</a>
+            </div>
+            <div class="px-5 py-2">
+                <a href="{% url 'blog' %}" class="text-base text-gray-500 hover:text-gray-900">Blog</a>
             </div>
             <div class="px-5 py-2">
                 <a href="{% url 'privacy_policy' %}" class="text-base text-gray-500 hover:text-gray-900">Privacy Policy</a>
