--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}{{ user.company.name }} Pets{% endblock title %}
+{% block title %}Blog{% endblock title %}
 
 {% block content %}
     <div class="bg-white">
@@ -11,36 +11,38 @@
                     <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Team Bio Blog</h2>
                     <p class="mt-2 text-lg leading-8 text-gray-600">Learn about our new and upcoming features/news!</p>
                 </div>
-                <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-                    <article class="flex max-w-xl flex-col items-start justify-between">
-                        <div class="flex items-center gap-x-4 text-xs">
-                            <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-                            <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
-                        </div>
-                        <div class="group relative">
-                            <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-                                <a href="#">
-                                    <span class="absolute inset-0"></span>
-                                    Boost your conversion rate
-                                </a>
-                            </h3>
-                            <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
-                        </div>
-                        <div class="relative mt-8 flex items-center gap-x-4">
-                            <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
-                            <div class="text-sm leading-6">
-                                <p class="font-semibold text-gray-900">
-                                    <a href="#">
-                                        <span class="absolute inset-0"></span>
-                                        Michael Foster
-                                    </a>
-                                </p>
-                                <p class="text-gray-600">Co-Founder / CTO</p>
+                <div class="mx-auto mt-4 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+                    {% for post in posts %}
+                        <article class="flex max-w-xl flex-col items-start justify-between">
+                            <div class="flex items-center gap-x-4 text-xs">
+                                <time datetime="2020-03-16" class="text-gray-500">{{ post.created_at }}</time>
+                                {% for tag in post.tags.all %}
+                                    <span class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{{ tag.name }}</span>
+                                {% endfor %}
                             </div>
-                        </div>
-                    </article>
+                            <div class="group relative">
+                                <h3 class=" text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                                    <a href="{{ post.get_absolute_url }}">
+                                        <span class="absolute inset-0"></span>
+                                        {{ post.title }}
+                                    </a>
+                                </h3>
+                                <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">{{ post.short_content }}</p>
+                            </div>
+                            <div class="relative mt-2 flex items-center gap-x-4">
+                                <img src="{{ post.posted_by.profile_picture_url }}" alt="" class="h-10 w-10 rounded-full bg-gray-50">
+                                <div class="text-sm leading-6">
+                                    <p class="font-semibold text-gray-900">
 
-                    <!-- More posts... -->
+                                        <span class="absolute inset-0"></span>
+                                        {{ post.posted_by.name }}
+
+                                    </p>
+                                    <p class="text-gray-600">{{ post.posted_by.title }}</p>
+                                </div>
+                            </div>
+                        </article>
+                    {% endfor %}
                 </div>
             </div>
         </div>
