Working on templates

--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -15,7 +15,7 @@
                     {% for post in posts %}
                         <article class="flex max-w-xl flex-col items-start justify-between">
                             <div class="flex items-center gap-x-4 text-xs">
-                                <time datetime="2020-03-16" class="text-gray-500">{{ post.created_at }}</time>
+                                <time class="text-gray-500">{{ post.created_at }}</time>
                                 {% for tag in post.tags.all %}
                                     <span class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{{ tag.name }}</span>
                                 {% endfor %}
