--- a/templates/pages/blog_post.html
+++ b/templates/pages/blog_post.html
@@ -10,7 +10,7 @@
                 <div class="mx-auto max-w-12xl sm:mt-3 sm:pt-3 lg:mx-0 lg:max-w-none">
                     <article class="flex max-w-xl flex-col items-start justify-between">
                         <div class="group relative">
-                            <h1 class="mt-3 mb-3 text-xlg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                            <h1 class="mt-3 mb-3 text-3xl font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
                                 <span class="absolute inset-0"></span>
                                 {{ post.title }}
                             </h1>
