--- a/templates/pages/blog_post.html
+++ b/templates/pages/blog_post.html
@@ -7,8 +7,8 @@
     <div class="bg-white">
         <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
             <div class="space-y-12">
-                <div class="mx-auto max-w-12xl sm:mt-3 sm:pt-3 lg:mx-0 lg:max-w-none">
-                    <article class="flex max-w-xl flex-col items-start justify-between">
+                <div class="mx-auto sm:mt-3 sm:pt-3 lg:mx-0 lg:max-w-none">
+                    <article class="flex flex-col items-start justify-between">
                         <div class="group relative">
                             <h1 class="mt-3 mb-3 text-3xl font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
                                 <span class="absolute inset-0"></span>
@@ -31,9 +31,14 @@
                             {% for tag in post.tags.all %}
                                 <span class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{{ tag.name }}</span>
                             {% endfor %}
+                            {% if user.is_superuser %}<a href="{% url 'admin:pages_blogpost_change' post.id %}" class="block w-fit rounded-md border border-transparent bg-red-500 py-2 px-4 text-base font-medium text-white hover:bg-opacity-75">Edit Post</a>{% endif %}
+
                         </div>
                         <br>
                         <div class="group relative">
+                            {% if post.thumbnail %}
+                                <img src="{{ post.thumbnail.url }}" class="mx-auto h-96 object-contain rounded-lg">
+                            {% endif %}
                             {{ post.content_html|safe }}
                         </div>
 
