--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
               crossorigin="anonymous">
-        
+
         <!-- Tailwinds CSS -->
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet"/>
@@ -55,6 +55,7 @@
                     <div class="ml-10 hidden space-x-8 lg:block">
                         {% if user.is_authenticated %}
                             <a href="{% url 'company_home' %}" class="text-base font-medium text-white hover:text-indigo-50">Home</a>
+                            <a href="{% url 'company_trivia' %}" class="text-base font-medium text-white hover:text-indigo-50">Trivia</a>
                             <a href="{% url 'company_pets' %}" class="text-base font-medium text-white hover:text-indigo-50">Pets</a>
 
                             {% if user.pk in user.company.get_owners %}
