Added button to take you to password reset page

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -37,10 +37,9 @@
                             <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
                         </div>
 
-                        {#                        <div class="text-sm">#}
-                        {#                            <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Forgot your#}
-                        {#                                password?</a>#}
-                        {#                        </div>#}
+                                                <div class="text-sm">
+                                                    <a href="{% url 'account_reset_password' %}" class="font-medium text-indigo-600 hover:text-indigo-500">Forgot your password?</a>
+                                                </div>
                     </div>
                     {% csrf_token %}
                     <div>
