Fixed mentions of signup page

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,7 +12,7 @@
                         {#                        <div class="hidden sm:mb-8 sm:flex sm:justify-center">#}
                         {#                            <div class="relative overflow-hidden rounded-full py-1.5 px-4 text-sm leading-6 ring-1 ring-gray-900/10 hover:ring-gray-900/20">#}
                         {#              <span class="text-gray-600">#}
-                        {#                Join now <a href="{% url 'account_signup' %}" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>#}
+                        {#                Join now <a href="{% url 'account_login' %}" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>#}
                         {#              </span>#}
                         {#                            </div>#}
                         {#                        </div>#}
@@ -20,7 +20,7 @@
                             <h1 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Meet your co-workers, virtually!</h1>
                             <p class="mt-6 text-lg leading-8 text-gray-600 sm:text-center">Learn about personality types, geographic similarities, and much much more!</p>
                             <div class="mt-8 flex gap-x-4 sm:justify-center">
-                                <a href="{% url 'account_signup' %}" class="inline-block rounded-lg bg-indigo-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-indigo-600 hover:bg-indigo-700 hover:ring-indigo-700">
+                                <a href="{% url 'account_login' %}" class="inline-block rounded-lg bg-indigo-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-indigo-600 hover:bg-indigo-700 hover:ring-indigo-700">
                                     Get started
                                     <span class="text-indigo-200" aria-hidden="true">&rarr;</span>
                                 </a>
