--- a/templates/pages/pricing.html
+++ b/templates/pages/pricing.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="mt-6">
                                 <div class="rounded-md shadow">
-                                    <a href="{% url 'account_signup' %}" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-5 py-3 text-base font-medium text-white hover:bg-indigo-700">Get Started</a>
+                                    <a href="{% url 'account_login' %}" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-5 py-3 text-base font-medium text-white hover:bg-indigo-700">Get Started</a>
                                 </div>
                             </div>
                         </div>
