--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -63,7 +63,7 @@
 
                     <div class="mt-6 grid grid-cols-1 gap-3">
                         <div>
-                            <form action="{% provider_login_url 'google' %}" method="post">
+                            <form method="post">
                                 {% csrf_token %}
                                 <button type="submit"
                                         class="inline-flex w-full justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-500 shadow-sm hover:bg-gray-50">
