--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -27,8 +27,8 @@
                         {% endif %}
                             <dl class="space-y-16 sm:grid sm:gap-x-6 sm:gap-y-16 sm:space-y-0 lg:gap-x-10">
                                 <div>
-                                  <dt class="text-base font-semibold leading-7 text-gray-900">Why do we only allow signup with certain accounts?</dt>
-                                  <dd class="mt-2 text-base leading-7 text-gray-600">Our features are specifically built to leverage account information in our login providers. We are always working on integrating more providers.</dd>
+                                  <dt class="text-base font-semibold leading-7 text-gray-900">Why do we only allow signup with certain account providers?</dt>
+                                  <dd class="mt-2 text-base leading-7 text-gray-600">Our features are specifically built to leverage account information from our login providers. We are always working on integrating more providers.</dd>
                                 </div>
                               </dl>
                     </div>
