--- a/templates/_base.html
+++ b/templates/_base.html
@@ -55,7 +55,7 @@
                     <div class="ml-10 hidden space-x-8 lg:block">
                         {% if user.is_authenticated %}
                             <a href="{% url 'company_home' %}" class="text-base font-medium text-white hover:text-indigo-50">Home</a>
-                            <a href="{% url 'company_trivia' %}" class="text-base font-medium text-white hover:text-indigo-50">Trivia</a>
+                            <a href="{% url 'trivia_home' %}" class="text-base font-medium text-white hover:text-indigo-50">Trivia</a>
                             <a href="{% url 'company_pets' %}" class="text-base font-medium text-white hover:text-indigo-50">Pets</a>
 
                             {% if user.pk in user.company.get_owners %}
