Added admin to menu if superuser on mobile

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -91,6 +91,9 @@
                     {% if user in user.company.get_owners %}
                         <a href="{% url 'company_settings' %}" class="text-base font-medium text-white hover:text-indigo-50">Settings</a>
                     {% endif %}
+                    {% if user.is_superuser %}
+                        <a href="/admin" class="text-base font-medium text-white hover:text-indigo-50">Admin</a>
+                    {% endif %}
                 {% endif %}
             </div>
         </nav>
