Added empty state

--- a/templates/trivia/home.html
+++ b/templates/trivia/home.html
@@ -46,6 +46,8 @@
                         </div>
                     </div>
                     </form>
+                {% empty %}
+                    <p class="text-sm text-gray-500">No trivia questions yet</p>
                 {% endfor %}
             </div>
         </div>
